--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  height: 750px;
+  align-items: center;
+  flex-direction: column;
+  background-color: #f8f8f8;
+}
+h1{
+  color: #475569;
 }
 
 .App-logo {
@@ -27,6 +36,7 @@
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
